# amplifier-bundle-session-guardian

./: README.md  bundle.md
behaviors/: session-guardian.yaml
context/: session-guardian-protocol.md
modules/session-guardian/: __init__.py  pyproject.toml
modules/session-guardian/amplifier_module_session_guardian/: __init__.py
modules/tool-session-state/: __init__.py  pyproject.toml
tests/: test_module_type.py
