[project]
name = "amplifier-session-guardian"
version = "1.0.0"
description = "Token tracking hooks for Amplifier session scope management"
requires-python = ">=3.11"
dependencies = ["amplifier-core"]

[project.entry-points."amplifier.modules"]
session-guardian = "session_guardian:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
