[project]
name = "amplifier-module-session-guardian"
version = "1.0.0"
description = "Token tracking hooks for Amplifier session scope management"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
session-guardian = "amplifier_module_session_guardian:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_session_guardian"]
