[project]
name = "amplifier-tool-session-state"
version = "1.0.0"
description = "Session state persistence tool for cross-session handoff"
requires-python = ">=3.11"
dependencies = ["amplifier-core"]

[project.entry-points."amplifier.modules"]
tool-session-state = "amplifier_tool_session_state:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_tool_session_state"]
